--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=QueenHabehaDB;user=sa;password=Anu685904"
+    "DefaultConnection": ""
   }
 }
