--- a/Client/package.json
+++ b/Client/package.json
@@ -17,9 +17,11 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "swiper": "^8.4.2",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
