--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "framer-motion": "^7.5.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
